# auto-frs-schedule

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml  rust.yml
assets/: Jadwal Kuliah Genap 22-23 T.Informatika ITS.xlsx
src/: db.rs  excel.rs  file.rs  lib.rs  main.rs  repo.rs  util.rs
src/commands/: base.rs  clean.rs  compare.rs  find.rs  mod.rs  sync.rs  update.rs
src/data/: mod.rs  set_data.rs
src/db/: db.rs  mod.rs
src/db/repository/: class.rs  class_repository.rs  lecturer.rs  lecturer_repository.rs  many_to_many.rs  many_to_many_repository.rs  mod.rs  plan.rs  plan_repository.rs  session.rs  session_repository.rs  subject.rs  subject_repository.rs
src/excel/: excel.rs  find_class.rs  get_schedule.rs  get_schedule_update.rs  into_map.rs  into_str.rs  mod.rs  parser.rs  retrieve.rs
src/file_writer/: class_writer.rs  compare_writer.rs  mod.rs  sql_writer.rs
src/parser/: as_id_parser.rs  as_string_parser.rs  mod.rs  schedule_parser.rs  session_parser.rs
src/shared/: db.rs  file.rs  mod.rs  repo.rs
src/shared/excel/: get_schedule.rs  get_schedule_update.rs  mod.rs  parser.rs  schedule_parser.rs  schedule_parser_with_id.rs
src/util/: file.rs
src/utils/: env.rs  file.rs  mod.rs
src/utils/excel/: as_id_parser.rs  as_string_parser.rs  find_class.rs  mod.rs  parser.rs  retrieve.rs  schedule_parser.rs  schedule_parser_with_id.rs  session_parser.rs
