[package]
name = "auto-frs-schedule"
version = "2.1.0"
edition = "2021"
description = "Automatically generate TC FRS schedule from Excel file"
authors = ["Mohamad Kholid Bughowi <kholidbughowi@gmail.com>"]
readme = "README.md"
repository = "https://github.com/albugowy15/auto-frs-schedule"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true


[dependencies]
calamine = "0.21.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
cuid = "1.3.1"
clap = { version = "4.3.19", features = ["derive"] }
anyhow = "1.0.72"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls","mysql" ] }
indicatif = "0.17.5"
