[package]
name = "auto-frs-schedule"
version = "2.4.1"
edition = "2021"
description = "Automatically generate TC FRS schedule from Excel file"
authors = ["Mohamad Kholid Bughowi <kholidbughowi@gmail.com>"]
readme = "README.md"
repository = "https://github.com/albugowy15/auto-frs-schedule"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true

[dependencies]
calamine = "0.22.1"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }
cuid = "1.3.2"
clap = { version = "4.4.10", features = ["derive"] }
anyhow = "1.0.75"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls","mysql" ] }
indicatif = "0.17.7"
log = "0.4.20"
env_logger = "0.10.1"
